加乘公因式合并优化